<resources>
    <string name="app_name">MRGE</string>
    <string name="hint_email">Mobile Number / Email Id</string>
    <string name="hint_password">* Enter Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="eventInfo" translatable="false">Event Info</string>
    <string name="qrbadge">QR Badge</string>
    <string name="notification">Notifications</string>
    <string name="qa"><![CDATA[Q & A]]> Session</string>
    <string name="qaspeaker"><![CDATA[Q & A]]> Speaker</string>
    <string name="qadirect"><![CDATA[Q & A]]></string>
    <string name="gallery">Image Gallery</string>
    <string name="documents">Documents</string>
    <string name="livepol">Live Poll</string>
    <string name="quiz">Quiz</string>
    <string name="contactus">Contact Helpdesk</string>
    <string name="privacy_policy">  Privacy Policy</string>
    <string name="swit">Switch Events</string>
    <string name="openDrawer">Drawer Open</string>
    <string name="closeDrawer">Drawer Close</string>
    <string name="firstname">* First Name</string>
    <string name="lastname">* Last Name</string>
    <string name="designation">* Designation</string>
    <string name="company">* Company Name</string>
    <string name="description">Description</string>
    <string name="city">* City</string>
    <string name="country">Country</string>
    <string name="logindummy">The Event App</string>
    <string name="logindummy2">1st dec 2017</string>
    <string name="logindummy3">Kanakia Zillion</string>
    <string name="contactno">* Contact Number</string>
    <string name="mobile">Mobile</string>
    <string name="engagement">Engagement</string>
    <string name="selfie">Selfie Engagement</string>
    <string name="reportpost">Report Post</string>
    <string name="hidepost">Hide Post</string>
    <string name="deletepost">Delete Post</string>
    <string name="reportuser">Report User</string>
    <string name="blockuser">Block User</string>
    <string name="cancel">Cancel</string>
    <string name="deletecomment">Delete Comment</string>
    <string name="reportcomment">Report Comment</string>
    <string name="hidecomment">Hide Comment</string>
    <string name="rate">Rate</string>
    <string name="sendmsg">Submit</string>
    <string name="attenddedetail">Attendee Details</string>
    <string name="comment">comment</string>
    <string name="refresh">Pull down to Refresh</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="login">Submit</string>
    <string name="create_evnt">Create an event</string>
    <string name="signup">CREATE ACCOUNT</string>
    <string name="whatsmind">What\'s on your mind?</string>
    <string name="typeMessage">Type here your message...</string>
    <string name="post">Post</string>
    <string name="postquestion">Post Question</string>
    <string name="createcontact">Create Contact</string>
    <string name="submit">Submit</string>
    <string name="upload">Upload</string>
    <string name="upload_selfie">Upload Selfie</string>
    <string name="upload_video">Upload Video</string>
    <string name="preview">Preview</string>
    <string name="caption">Enter Caption</string>
    <string name="uploadphoto">Upload Photo</string>
    <string name="btnsignup">CREATE ACCOUNT</string>
    <string name="speakerdetial">Speaker Details</string>
    <string name="sendrating">Send Rating</string>
    <string name="ratebtn">Rate</string>
    <string name="search_attendee_here">Type here to search Attendee</string>
    <string name="search_speaker_here">Type here to search Speaker</string>
    <string name="search_event_here">Type here to search Event</string>
    <string name="search_exhicat_here">Type here to search exhibitors category</string>
    <string name="search_exhibitor_here">Type here to search exhibitor </string>

    <string name="replybtn">Reply</string>
    <string name="version">Version: 1.3.2</string>
    <string name="attendee">Attendee</string>
    <string name="agenda">Agenda</string>
    <string name="speaker">Speaker</string>
    <string name="notifications_admin_channel_name">Procialize</string>
    <string name="notifications_admin_channel_description">Procialize</string>
    <string name="eula">EULA</string>
    <string name="no_matches_found">No matches found</string>
    <string-array name="com_google_android_gms_fonts_certs">
        <item>/ue900</item>
        <item>/ue900</item>
        <item>/ue900</item>
        <item>/ue900</item>
    </string-array>
    <string name="asset_statements" translatable="false">[{ \"include\": \"https://procialize.live/.well-known/assetlinks.json\" }]</string>
    <string name="expert">Help Desk</string>
    <string name="title_activity_exhibitor_listing">ExhibitorListingActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Zoom-->

    <string name="invite_acitivity_name">Meeting Invite Example</string>

    <string name="zm_rc_using_fingers_for_remote_control">Remotely control a desktop using gestures</string>
    <string name="zm_rc_one_finger_tap">Tap with one finger</string>
    <string name="zm_rc_one_finger_tap_description">Tap the screen with one finger to click the mouse</string>
    <string name="zm_rc_one_finger_double_taps">Double tap with one finger</string>
    <string name="zm_rc_one_finger_double_taps_description">Double tap with one finger to double click the mouse</string>
    <string name="zm_rc_one_long_tap">Long press with one finger</string>
    <string name="zm_rc_one_long_tap_description">Press the screen with one finger to right-click the mouse</string>
    <string name="zm_rc_two_fingers_scroll">Swipe with two fingers</string>
    <string name="zm_rc_two_fingers_scroll_description">Swipe with two fingers to scroll up and down</string>
    <string name="zm_rc_two_fingers_pinch">Pinch with two fingers</string>
    <string name="zm_rc_two_fingers_pinch_description">Pinch in and out with two fingers to zoom in and out</string>
    <string name="zm_rc_mouse_icon">Mouse icon</string>
    <string name="zm_rc_mouse_icon_description">Drag the mouse icon to move the remote mouse pointer</string>
    <string name="zm_rc_tap_notice">Tap here to control %s\'s screen remotely</string>

    <string name="alert_other_is_sharing">You cannot start screen share while the other participant is sharing.</string>

    <string name="settings_custom_ui">Customized UI</string>
    <string name="settings_switch_domain">Switch domain</string>
    <string name="settings_hide_screen_share_toolbar_annotation">Hide annotation button in screen share</string>
    <string name="settings_hide_screen_share_toolbar_stopshare">Hide stopshare button in screen share</string>

    <string name="remove_from_buddy_list"><u>Tap to remove from buddy list</u></string>
</resources>
