<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/linear"
    tools:context="com.procialize.mrgeApp20.Fragments.SpeakerFragment">

    <!-- TODO: Update blank fragment layout -->

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appBarLayout"
        app:elevation="0dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colortoolbar"
            android:elevation="@dimen/elevation"
            android:contentInsetLeft="0dp"
            android:contentInsetStart="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            android:contentInsetRight="0dp"
            android:contentInsetEnd="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetEnd="0dp"
            android:minHeight="?attr/actionBarSize">

            <ImageView
                android:id="@+id/headerlogoIv"
                android:layout_marginLeft="-10dp"
                android:layout_width="150dp"
                android:contentDescription=" "
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                />

        </androidx.appcompat.widget.Toolbar>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/linecolor"/>


    </com.google.android.material.appbar.AppBarLayout>


    <com.procialize.mrgeApp20.Fonts.RobotoTextview
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:gravity="center"
        android:padding="@dimen/padding"
        android:textSize="10sp"
        android:text="@string/refresh"
        />

    <com.procialize.mrgeApp20.Fonts.RobotoTextview
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/activetab"
        android:gravity="center"
        android:padding="@dimen/padding"
        android:textSize="@dimen/textsizenormal"
        android:text="@string/speaker"
        />


    <com.procialize.mrgeApp20.Fonts.RobotoTextInputEditext
        android:background="@drawable/edittexthmbg"
        android:id="@+id/searchEt"
        android:layout_margin="10dp"
        android:hint="@string/search_speaker_here"
        android:textSize="@dimen/textsizesmall"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:imeOptions="actionDone"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_gravity="center"
        android:layout_width="20dp"
        android:layout_height="20dp" android:background="@drawable/loader"/>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/speakerfeedrefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/speakerrecycler"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</LinearLayout>
